django-swag/django-swag/deployment/spekt8-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spekt8
spec:
  selector:
    matchLabels:
      component: spekt8
  replicas: 1
  template:
    metadata:
      labels:
        component: spekt8
    spec:
      containers:
        - name: spekt8
          image: elliotxkim/spekt8
          ports:
            - containerPort: 4000
