django-swag/django-swag/deployment/dashboard-deployment.yml
# kubectl apply -f dashboard-deployment.yml 
# to both create and update deployment
# each component has a specifc apiVersion that you can look up

# There are 3 parts to every configuration file:
# 1. metadata
# 2. specification
# 3. status (automatically generated by K8s) Desired? = Actual?

# now also creates service file included below.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  # labels used by the service selector
  labels:
    app: dashboard
# specification for deployment specific to the kind of component.
spec:
# replicas of pods we want to create
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
# specification for the pod, like a config file inside of a config file
  template:
    metadata:
      labels:
        app: dashboard
    # blueprint for a pod
    spec:
      containers:
      - name: dashboard
        image: weezy018/saleor-dashboard:dev
        ports:
        - containerPort: 9000
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  labels:
    app: dashboard

spec:
  selector:
    # must match pod component label from deployment.
    app: dashboard
  ports:
  - protocol: TCP
    # service port
    port: 9000
    # container port
    targetPort: 9000
