django-swag/django-swag/deployment/saleor-core-deployment.yml
# kubectl apply -f saleor-core-deployment.yml 
# to both create and update deployment
# each component has a specifc apiVersion that you can look up

# There are 3 parts to every configuration file:
# 1. metadata
# 2. specification
# 3. status (automatically generated by K8s) Desired? = Actual?

# now also creates service file included below.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-core-deployment
  # labels used by the service selector
  labels:
    app: core
# specification for deployment specific to the kind of component.
spec:
# replicas of pods we want to create
  replicas: 1
  selector:
    matchLabels:
      app: core
# specification for the pod, like a config file inside of a config file
  template:
    metadata:
      labels:
        app: core
    # blueprint for a pod
    spec:
      containers:
      - name: core
        image: weezy018/saleor-core:1.0
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: core-service
  labels:
    app: core
spec:
  selector:
    # must match pod component label from deployment.
    app: core
  ports:
  - protocol: TCP
    # service port
    port: 8000
    # container port
    targetPort: 8000
