django-swag/django-swag/deployment/storefront-deployment.yml
# kubectl apply -f storefront-deployment.yml 
# to both create and update deployment
# each component has a specifc apiVersion that you can look up

# There are 3 parts to every configuration file:
# 1. metadata
# 2. specification
# 3. status (automatically generated by K8s) Desired? = Actual?

# now also creates service file included below.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-deployment
  # labels used by the service selector
  labels:
    app: storefront
# specification for deployment specific to the kind of component.
spec:
# replicas of pods we want to create
  replicas: 1
  selector:
    matchLabels:
      app: storefront
# specification for the pod, like a config file inside of a config file
  template:
    metadata:
      labels:
        app: storefront
    # blueprint for a pod
    spec:
      containers:
      - name: storefront
        image: ulisses1478/saleor-storefront:latest
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: storefront-service
  #labels:
    #app: storefront
spec:
  #type: ExternalName
  externalName: ingress-nginx-controller-admission.kube-system.svc.cluster.local
  selector:
    # must match pod component label from deployment.
    app: storefront
  ports:
  - protocol: TCP
     # service port
    port: 3000
     # container port
    targetPort: 3000
